login model design and dashboard

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_LOGIN_EMAIL = reikiadmin@gmail.com
-REACT_APP_LOGIN_PASSWORD = Reiki@123
+REACT_APP_URL = "https://reike.onrender.com/api/v1"
+# Admin Password = Reiki@123
